loopfor.LoopCourseForest.scala.error
Erreur de compilation :
LoopCourseForest:1: error: Missing closing brace `}' assumed here
for (i <- 1 to 28) {
^